[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/menu/loadout.png" type="Texture" id=1]
[ext_resource path="res://scripts/loadout.gd" type="Script" id=2]
[ext_resource path="res://images/menu/loadoutSelection.png" type="Texture" id=3]

[node name="loadout" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="selectionQ" type="Sprite" parent="."]
position = Vector2( 30, 70 )
texture = ExtResource( 3 )
centered = false

[node name="selectionE" type="Sprite" parent="."]
position = Vector2( 126, 70 )
texture = ExtResource( 3 )
centered = false

[node name="selectionGun" type="Sprite" parent="."]
position = Vector2( 222, 70 )
texture = ExtResource( 3 )
centered = false
